--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -28,7 +28,7 @@ a {
 }
 
 div.main {
-    width: 760px;
+    width: 920px;
     min-height: 300px;
     display: block;
     margin-left: auto;
@@ -44,26 +44,12 @@ div.main {
     height: auto;
 }
 
-.ratings {
-    border-top: 1px solid lightgray;
-    padding: 15px 0px;
-    clear: left;
-    margin: 15px 5px 5px 5px;
-    font-weight: 500;
+.main table {
+    border-collapse:collapse;
 }
 
-#header {
-    border: none;
-}
-
-.ratings div {
-    width: 20%;
-    float: left;
-}
-
-.button {
-    float: right;
-
+td.ratings {
+    border-top: 1px solid #6d6d6d;
 }
 
 .param {
@@ -89,4 +75,50 @@ img#edit {
 #img {
     width: 100%;
     padding: 10px;
+}
+
+@media
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+    /* Force table to not be like tables anymore */
+    table, thead, tbody, th, td, tr {
+        display: block;
+        text-align: left;
+    }
+
+    /* Hide table headers (but not display: none;, for accessibility) */
+    thead tr {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+
+    tr { border: 1px solid #e0e0e0; }
+
+    td.ratings {
+        /* Behave  like a "row" */
+        border: none;
+        border-bottom: 1px solid #dfdfdf;
+        position: relative;
+        padding-left: 30%;
+    }
+
+    td:before {
+        /* Now like a table header */
+        position: absolute;
+        /* Top/left values mimic padding */
+        top: 6px;
+        left: 6px;
+        width: 25%;
+        padding-right: 10px;
+        white-space: nowrap;
+    }
+
+    td:nth-of-type(1):before { content: "Title"; }
+    td:nth-of-type(2):before { content: "Director"; }
+    td:nth-of-type(3):before { content: "Year"; }
+    td:nth-of-type(4):before { content: "Rating"; }
+    td:nth-of-type(5) { border: none }
+    td:nth-of-type(6):before { content: " "; }
 }
