single helper, multiple inputs...

--- a/templates/ratings/edit.html
+++ b/templates/ratings/edit.html
@@ -31,11 +31,11 @@
         <div class="param">Rating:</div>
         <div class="output">
             <select name="rating">
-                <option value="1" {{match1 rating}}>1</option>
-                <option value="2" {{match2 rating}}>2</option>
-                <option value="3" {{match3 rating}}>3</option>
-                <option value="4" {{match4 rating}}>4</option>
-                <option value="5" {{match5 rating}}>5</option>
+                <option value="1" {{selectMatch rating "1"}}>1</option>
+                <option value="2" {{selectMatch rating "2"}}>2</option>
+                <option value="3" {{selectMatch rating "3"}}>3</option>
+                <option value="4" {{selectMatch rating "4"}}>4</option>
+                <option value="5" {{selectMatch rating "5"}}>5</option>
             </select>
         </div>
         <div class="param">Poster URL:</div>
